--- a/style.scss
+++ b/style.scss
@@ -2,4 +2,7 @@ div{
     width: 200px;
     height: 200px;
     background-color: #110033;
+    color:#FFF;
+    font-size: 24px;
+    font-weight: 500;
 }
